Duplicating object, rotating, pivot point not used #62015

Closed
opened 2019-02-27 15:48:26 +01:00 by Ian Finnimore · 12 comments

System Information
Operating system: Win64
Graphics card:

Blender Version
Broken: 2.80 beta, 168defd527c4, blender2.8, blender2.7 2019-02-27 01:36
Worked: (optional): 2.79

Short description of error
Duplicating an object with immediate rotation does not respect pivot point selected

Exact steps for others to reproduce the error
Default startup.
Select and shift cube away from origin
verify cursor is at world origin
select cursor as pivot point

Key sequence:
Ctrl-D (or Alt-D), R

Rotate using mouse or angle input, cube rotates on origin only, not on selected pivot point.

**System Information** Operating system: Win64 Graphics card: **Blender Version** Broken: 2.80 beta, 168defd527c4, blender2.8, blender2.7 2019-02-27 01:36 Worked: (optional): 2.79 **Short description of error** Duplicating an object with immediate rotation does not respect pivot point selected **Exact steps for others to reproduce the error** Default startup. Select and shift cube away from origin verify cursor is at world origin select cursor as pivot point Key sequence: Ctrl-D (or Alt-D), R Rotate using mouse or angle input, cube rotates on origin only, not on selected pivot point.
Author

Added subscriber: @IanFinn

Added subscriber: @IanFinn
Campbell Barton was assigned by Sebastian Parborg 2019-02-27 16:01:28 +01:00

I can't redo this, check both 03da3b6593 & 8a432c1a40 . what version fails?

I can't redo this, check both 03da3b6593 & 8a432c1a40 . what version fails?

Added subscriber: @capnm

Added subscriber: @capnm

Tested current f57fce3534
It's broken if you try any transform immediately after the duplicate op:
Screenshot from 2019-02-27 17-08-32.png

Tested current f57fce3534 It's broken if you try any transform immediately after the duplicate op: ![Screenshot from 2019-02-27 17-08-32.png](https://archive.blender.org/developer/F6724379/Screenshot_from_2019-02-27_17-08-32.png)

Confirmed - relies on not confirming the first transform, will look into it.

Confirmed - relies on not confirming the first transform, will look into it.

The pivot point of the fist transform is always the object origin, that is also wrong.

The pivot point of the fist transform is always the object origin, that is also wrong.
Campbell Barton removed their assignment 2019-02-28 23:46:26 +01:00
Sergey Sharybin was assigned by Campbell Barton 2019-02-28 23:46:26 +01:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Caused by 13f28798de

Caused by 13f28798de

@ideasman42 , did you try to simply change the constraints flag on evaluated object? Will that fix the issue?

@ideasman42 , did you try to simply change the constraints flag on evaluated object? Will that fix the issue?

Nevermind, managed to reproduce. Fixing now.

Nevermind, managed to reproduce. Fixing now.

This issue was referenced by 2a731adae7

This issue was referenced by 2a731adae7d481b258e551db30c640660e81b4ea

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62015
No description provided.